rust/macros/tests/invalid/target/debug/deps/macros-9fe62372a58a55d8.d
/home/diny/projects-code/exercism-solutions/rust/macros/tests/invalid/target/debug/deps/libmacros-9fe62372a58a55d8.rmeta: /home/diny/projects-code/exercism-solutions/rust/macros/src/lib.rs

/home/diny/projects-code/exercism-solutions/rust/macros/tests/invalid/target/debug/deps/macros-9fe62372a58a55d8.d: /home/diny/projects-code/exercism-solutions/rust/macros/src/lib.rs

/home/diny/projects-code/exercism-solutions/rust/macros/src/lib.rs:
